// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon children 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru"
>
  Text
</i>
`;

exports[`Icon className 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru Test"
/>
`;

exports[`Icon height 3xl 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_height_3xl"
/>
`;

exports[`Icon height l 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_height_l"
/>
`;

exports[`Icon height m 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_height_m"
/>
`;

exports[`Icon height s 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_height_s"
/>
`;

exports[`Icon height xl 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_height_xl"
/>
`;

exports[`Icon name alfa-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_alfa-bank"
/>
`;

exports[`Icon name american-express-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_american-express-paysystem"
/>
`;

exports[`Icon name apple-pay 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_apple-pay"
/>
`;

exports[`Icon name bin-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_bin-bank"
/>
`;

exports[`Icon name discover-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_discover-paysystem"
/>
`;

exports[`Icon name faster-payments-system 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_faster-payments-system"
/>
`;

exports[`Icon name gazprom-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_gazprom-bank"
/>
`;

exports[`Icon name google-pay 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_google-pay"
/>
`;

exports[`Icon name jcb-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_jcb-paysystem"
/>
`;

exports[`Icon name maestro-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_maestro-paysystem"
/>
`;

exports[`Icon name mastercard-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_mastercard-paysystem"
/>
`;

exports[`Icon name mir-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_mir-paysystem"
/>
`;

exports[`Icon name mkb-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_mkb-bank"
/>
`;

exports[`Icon name new-bank-card 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_new-bank-card"
/>
`;

exports[`Icon name otkritie-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_otkritie-bank"
/>
`;

exports[`Icon name raiffeisen-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_raiffeisen-bank"
/>
`;

exports[`Icon name ros-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_ros-bank"
/>
`;

exports[`Icon name rosselkhoz-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_rosselkhoz-bank"
/>
`;

exports[`Icon name russian-standard-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_russian-standard-bank"
/>
`;

exports[`Icon name sber-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_sber-bank"
/>
`;

exports[`Icon name security-lock 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_security-lock"
/>
`;

exports[`Icon name sovcom-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_sovcom-bank"
/>
`;

exports[`Icon name tinkoff-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_tinkoff-bank"
/>
`;

exports[`Icon name tinkoff-loan 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_tinkoff-loan"
/>
`;

exports[`Icon name unicredit-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_unicredit-bank"
/>
`;

exports[`Icon name unionpay-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_unionpay-paysystem"
/>
`;

exports[`Icon name unknown-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_unknown-bank"
/>
`;

exports[`Icon name uralsib-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_uralsib-bank"
/>
`;

exports[`Icon name uzcard-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_uzcard-paysystem"
/>
`;

exports[`Icon name visa-electron-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_visa-electron-paysystem"
/>
`;

exports[`Icon name visa-paysystem 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_visa-paysystem"
/>
`;

exports[`Icon name vtb-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_vtb-bank"
/>
`;

exports[`Icon name y-logo 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo"
/>
`;

exports[`Icon name yandex-bank 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_yandex-bank"
/>
`;

exports[`Icon name yoo-money 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_name_yoo-money"
/>
`;

exports[`Icon width l 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_width_l"
/>
`;

exports[`Icon width m 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_width_m"
/>
`;

exports[`Icon width s 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_width_s"
/>
`;

exports[`Icon width xl 1`] = `
<i
  aria-hidden={true}
  className="YpcIcon YpcIcon_lang_ru YpcIcon_width_xl"
/>
`;
